@@ -2,6 +2,6 @@
 
 defined('MOODLE_INTERNAL') || die;
 
-$plugin->version   = 2015063000;        // The current plugin version (Date: YYYYMMDDXX)
+$plugin->version   = 2017101000;        // The current plugin version (Date: YYYYMMDDXX)
 $plugin->requires  = 2014051200;        // Requires this Moodle version 2.7
 $plugin->component = 'local_rcommon';
